Fix top row shift: correct selectors to include Woodworking folder

--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -67,9 +67,9 @@
     z-index: 10;
 }
 
-.file-folder:nth-of-type(1),
 .file-folder:nth-of-type(2),
-.file-folder:nth-of-type(3) {
+.file-folder:nth-of-type(3),
+.file-folder:nth-of-type(4) {
     position: relative;
     top: -10vh;
 }
